# Revised-Game-Engine

./: .gitignore  CMakeLists.txt  README.md
Game/: CMakeLists.txt  config.h  config.in
Game/include/: config.h
Game/include/Enemy/: CopyCatEnemy.h  CopyCatGameStage.h  DancerEnemy.h  DancerGameStage.h  EnemySpaceship.h  EnforcerEnemy.h  EnforcerGameStage.h  Hexagon.h  HexagonGameStage.h  MadMaxGameStage.h  RookieEnemy.h  RookieGameStage.h  Sinner.h  SinnerBossGameStage.h  TwinBlade.h  TwinBladeGameStage.h  UFO.h  UFOGameStage.h  Vanguard.h  VanguardGameStage.h
Game/include/GameFramework/: GameApplication.h
Game/include/GameName/: GameApplication.h
Game/include/Gameplay/: HealthComponent.h
Game/include/Level/: GameLevelOne.h  MainMenu.h
Game/include/Player/: Player.h  PlayerManager.h  PlayerRewards.h  PlayerSpaceship.h
Game/include/Spaceship/: Spaceship.h
Game/include/UI/: GameHUD.h  MainMenuHUD.h
Game/include/VFX/: Explosion.h
Game/include/Weapon/: BulletShooter.h  Launcher.h  MoonProjectileLauncher.h  Projectile.h  ProjectileLauncher.h  ThreeProjectileLauncher.h  TripleTroubleProjectileLauncher.h  WiperProjectileLauncher.h
Game/src/Enemy/: CopyCatEnemy.cpp  CopyCatGameStage.cpp  DancerEnemy.cpp  DancerGameStage.cpp  EnemySpaceship.cpp  EnforcerEnemy.cpp  EnforcerGameStage.cpp  Hexagon.cpp  HexagonGameStage.cpp  MadMaxGameStage.cpp  RookieEnemy.cpp  RookieGameStage.cpp  Sinner.cpp  SinnerBossGameStage.cpp  TwinBlade.cpp  TwinBladeGameStage.cpp  UFO.cpp  UFOGameStage.cpp  Vanguard.cpp  VanguardGameStage.cpp
Game/src/GameFramework/: GameApplication.cpp
Game/src/Gameplay/: HealthComponent.cpp
Game/src/Level/: GameLevelOne.cpp  MainMenu.cpp
Game/src/Player/: Player.cpp  PlayerManager.cpp  PlayerRewards.cpp  PlayerSpaceship.cpp
Game/src/Spaceship/: Spaceship.cpp
Game/src/UI/: GameHUD.cpp  MainMenuHUD.cpp
Game/src/VFX/: Explosion.cpp
Game/src/Weapon/: BulletShooter.cpp  Launcher.cpp  MoonProjectileLauncher.cpp  Projectile.cpp  ProjectileLauncher.cpp  ThreeProjectileLauncher.cpp  TripleTroubleProjectileLauncher.cpp  WiperProjectileLauncher.cpp
GameEngine/: CMakeLists.txt
GameEngine/include/: Core.h  EntryPoint.h
GameEngine/include/Framework/: Actor.h  Application.h  AssetManager.h  Core.h  MathUtility.h  Object.h  World.h
GameEngine/include/LabyrinthEngine/: Actor.h  Application.h  AssetManager.h  Core.h  EventCallback.h  MathUtility.h  Object.h  PhysicsSystem.h  World.h
GameEngine/src/: EntryPoint.cpp
GameEngine/src/Framework/: Actor.cpp  Application.cpp  AssetManager.cpp  Core.cpp  MathUtility.cpp  Object.cpp  World.cpp
GameEngine/src/LabyrinthEngine/: Actor.cpp  Application.cpp  AssetManager.cpp  Core.cpp  EventCallback.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  World.cpp
LabyrinthEngine/: CMakeLists.txt
LabyrinthEngine/include/: EntryPoint.h
LabyrinthEngine/include/Gameplay/: GameStage.h  WaitStage.h
LabyrinthEngine/include/LabyrinthFramework/: Actor.h  Application.h  AssetManager.h  AudioManager.h  Core.h  EventCallback.h  MathUtility.h  Object.h  PhysicsSystem.h  TimeKeeper.h  TimeManager.h  World.h
LabyrinthEngine/include/LabyrinthVFX/: Particle.h
LabyrinthEngine/include/UI/: ButtonWidget.h  HUD.h  ImageWidget.h  StatusMeter.h  TextWidget.h  Widget.h
LabyrinthEngine/include/sys/: string.h
LabyrinthEngine/src/: EntryPoint.cpp
LabyrinthEngine/src/Gameplay/: GameStage.cpp  WaitStage.cpp
LabyrinthEngine/src/LabyrinthFramework/: Actor.cpp  Application.cpp  AssetManager.cpp  AudioManager.cpp  Core.cpp  EventCallback.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  TimeKeeper.cpp  TimeManager.cpp  World.cpp
LabyrinthEngine/src/LabyrinthVFX/: Particle.cpp
LabyrinthEngine/src/UI/: ButtonWidget.cpp  HUD.cpp  ImageWidget.cpp  StatusMeter.cpp  TextWidget.cpp  Widget.cpp
UdemyYears/: CMakeLists.txt
UdemyYears/include/Framework/: Application.h
UdemyYears/src/: main.cpp
UdemyYears/src/Framework/: Application.cpp
